[tool.poetry]
name = "danabridge-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "danabridge_python"}]

[tool.poetry.dependencies]
python = "^3.11"
oauthlib = "^3.2.2"
requests-oauthlib = "^1.3.1"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
